--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,4 +3,6 @@
 @import 'layout/layout';
 @import 'components/header';
 @import 'components/nav';
+@import 'components/home';
+@import 'components/button';
 @import 'theme/theme';
