--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -21,6 +21,11 @@ body {
   color: var(--text-color);
 }
 
+h1, h2, h3 , h4 {
+  font-size: var(--h2-font-size);
+  font-weight: var(--font-medium);
+}
+
 ul {
   list-style-type: none;
 }
