--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,4 +5,5 @@
 @import 'components/nav';
 @import 'components/home';
 @import 'components/button';
+@import 'components/featured';
 @import 'theme/theme';
