Added story section

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,4 +6,5 @@
 @import 'components/home';
 @import 'components/button';
 @import 'components/featured';
+@import 'components/story';
 @import 'theme/theme';
