Added products section

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -7,4 +7,5 @@
 @import 'components/button';
 @import 'components/featured';
 @import 'components/story';
+@import 'components/products';
 @import 'theme/theme';
