Added testimonial section with slider

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -8,4 +8,5 @@
 @import 'components/featured';
 @import 'components/story';
 @import 'components/products';
+@import 'components//testimonial';
 @import 'theme/theme';
