Added section new with slider

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -9,4 +9,5 @@
 @import 'components/story';
 @import 'components/products';
 @import 'components//testimonial';
+@import 'components//new';
 @import 'theme/theme';
