Added newsletter section

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -10,4 +10,5 @@
 @import 'components/products';
 @import 'components//testimonial';
 @import 'components//new';
+@import 'components//newsletter';
 @import 'theme/theme';
