--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -11,4 +11,5 @@
 @import 'components//testimonial';
 @import 'components//new';
 @import 'components//newsletter';
+@import 'components//footer';
 @import 'theme/theme';
