Added scrollup and modify scrollbar

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -12,4 +12,6 @@
 @import 'components//new';
 @import 'components//newsletter';
 @import 'components//footer';
+@import 'components//scrollup';
+@import 'components//scrollbar';
 @import 'theme/theme';
