--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -14,4 +14,5 @@
 @import 'components//footer';
 @import 'components//scrollup';
 @import 'components//scrollbar';
+@import 'components//cart';
 @import 'theme/theme';
