Added dark theme

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -19,6 +19,7 @@ body {
   margin: 0;
   background-color: var(--body-color);
   color: var(--text-color);
+  transition: .4s;
 }
 
 h1, h2, h3 , h4 {
