--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -15,4 +15,5 @@
 @import 'components//scrollup';
 @import 'components//scrollbar';
 @import 'components//cart';
+@import 'components//media';
 @import 'theme/theme';
