--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -1,6 +1,6 @@
 .button {
   display: inline-block;
-  padding: 1.25em 2em;
+  padding: 1.25rem 2rem;
   background-color: var(--button-color);
   color: #fff;
   font-weight: var(--font-medium);
