--- a/assets/scss/components/_home.scss
+++ b/assets/scss/components/_home.scss
@@ -12,7 +12,7 @@
       height: 430px;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-end;
       justify-self: flex-end;
       padding-bottom: 2rem;
       background-color: var(--first-color);
